--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -58,6 +58,6 @@ sphinx:
   extra_extensions:   # A list of extra extensions to load by Sphinx.
   - sphinx_inline_tabs
   config:   # key-value pairs to directly over-ride the Sphinx configuration
-    html_theme: insipid
+    html_theme: sphinx_book_theme
     html_permalinks_icon: '§'
     mathjax_path: https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
