--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,9 +1,9 @@
 - file: index
-- file: getting-started
-- file: data
-- file: preproc
-- file: study1
-- file: study2
-- file: jupyter
-- file: R
-- file: Python
+# - file: getting-started
+# - file: data
+# - file: preproc
+# - file: study1
+# - file: study2
+# - file: jupyter
+# - file: R
+# - file: Python
