--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -11,19 +11,13 @@
   chapters:
       - file: TL-module2
       - file: PW-module2
+# - part: Acknowledgement 
 # - part: Theoretical Lecture
 #   chapters:
 #     - file: TL-module0
 # - part: Practical Workshop
   # chapters:
       # - file: PW-module0
-#     # - file: module-02_python-basics
-#     # - file: module-03_data-structures
-#     # - file: module-04_data-processing
-#     # - file: module-05_data-visualization
-#     # - file: module-06_numerical-operations
-#     # - file: module-07_t-tests
-#     # - file: module-08_linear-models
 #     # - file: projects-showcase
 # - part: Acknowledgement 
 #   chapters:
