--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -19,6 +19,10 @@
   chapters:
       - file: TL-module4
       - file: PW-module4
+- part: Module 5
+  chapters:
+      - file: TL-module5
+      - file: PW-module5
 # - part: Acknowledgement 
 # - part: Theoretical Lecture
 #   chapters:
