--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -23,6 +23,10 @@
   chapters:
       - file: TL-module5
       - file: PW-module5
+- part: Module 6
+  chapters:
+      - file: TL-module6
+      - file: PW-module6
 # - part: Acknowledgement 
 # - part: Theoretical Lecture
 #   chapters:
