--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -27,6 +27,7 @@
   chapters:
       - file: TL-module6
       - file: PW-module6
+- file: acknowledgement
 # - part: Acknowledgement 
 #   chapters:
 #     - file: acknowledgement
