--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -27,10 +27,9 @@
   chapters:
       - file: TL-module6
       - file: PW-module6
-- file: acknowledgement
-# - part: Acknowledgement 
-#   chapters:
-#     - file: acknowledgement
+- part: Acknowledgement 
+  chapters:
+    - file: acknowledgement
 # - part: Theoretical Lecture
 #   chapters:
 #     - file: TL-module0
