undo PDF attach

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -65,7 +65,7 @@ sphinx:
 #######################################################################################
 
 #######################################################################################
-# PDF embedding setting
-parse:
-  myst_enable_extensions:
-    - colon_fence
+# # PDF embedding setting
+# parse:
+#   myst_enable_extensions:
+#     - colon_fence
